--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,7 @@ input[type='date']::-webkit-outer-spin-button {
     opacity: 1;
     -webkit-appearance: none;
 }
+
+button:disabled {
+    opacity: 0.1!important;
+}
